[gd_scene load_steps=30 format=3 uid="uid://2jagsrxlpphc"]

[ext_resource type="Script" uid="uid://8su2ejv3aa1t" path="res://Scripts/apple.gd" id="1_e4wtg"]
[ext_resource type="Texture2D" uid="uid://ditbncm6nvoxd" path="res://Assets/Items/Fruits/Collected.png" id="1_idgs1"]
[ext_resource type="Texture2D" uid="uid://d3kh3qkvrcgyu" path="res://Assets/Items/Fruits/Apple.png" id="2_e4wtg"]
[ext_resource type="AudioStream" uid="uid://c2xqpkpcgbovp" path="res://Sounds/CoinCollection.mp3" id="4_nxgeo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_e4wtg"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_e4wtg"]
atlas = ExtResource("2_e4wtg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxgeo"]
atlas = ExtResource("2_e4wtg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lk3oj"]
atlas = ExtResource("2_e4wtg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k64b1"]
atlas = ExtResource("2_e4wtg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ku8fg"]
atlas = ExtResource("2_e4wtg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pvmd"]
atlas = ExtResource("2_e4wtg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1hhu"]
atlas = ExtResource("2_e4wtg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8q4h"]
atlas = ExtResource("2_e4wtg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfvpu"]
atlas = ExtResource("2_e4wtg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ki4"]
atlas = ExtResource("2_e4wtg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uh04y"]
atlas = ExtResource("2_e4wtg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_38u0r"]
atlas = ExtResource("2_e4wtg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgjor"]
atlas = ExtResource("2_e4wtg")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0eww0"]
atlas = ExtResource("2_e4wtg")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w37ye"]
atlas = ExtResource("2_e4wtg")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_arrqd"]
atlas = ExtResource("2_e4wtg")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aue3v"]
atlas = ExtResource("2_e4wtg")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h3op0"]
atlas = ExtResource("1_idgs1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbpl3"]
atlas = ExtResource("1_idgs1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jcix"]
atlas = ExtResource("1_idgs1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hik03"]
atlas = ExtResource("1_idgs1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ix76h"]
atlas = ExtResource("1_idgs1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_88j6w"]
atlas = ExtResource("1_idgs1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nxgeo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4wtg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxgeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lk3oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k64b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ku8fg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pvmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1hhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8q4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfvpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ki4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uh04y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38u0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgjor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0eww0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w37ye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arrqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aue3v")
}],
"loop": true,
"name": &"Apple",
"speed": 21.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h3op0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbpl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jcix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hik03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ix76h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88j6w")
}],
"loop": false,
"name": &"Collected",
"speed": 15.0
}]

[node name="Apple" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_e4wtg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_e4wtg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nxgeo")
animation = &"Collected"
autoplay = "Apple"
frame = 5
frame_progress = 1.0

[node name="CollectionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nxgeo")
volume_db = -15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
